Update index with Summer of KMS stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Patrick Steadman</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content="Patrick Steadman's writing and programming projects.">
+<meta name='description' content="Patrick Steadman is a writer and programmer living in Brooklyn, currently head of operations at Computer Lab.">
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -21,9 +21,15 @@
   </ul>
   <p>Welcome to my vanity website.</p> 
   <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
-  <p>Current employment: <a href="http://computerlab.io">Computer Lab</a></p>
+  <br>
+  <br>
+  <p>Currently working at <a href="http://computerlab.io">Computer Lab</a>.</p>
   <h2>Programming</h2>
   <ul>
+    <li>
+      <a target='_blank'  href='http://github.com/ptsteadman/semver-for-natural-language'>Semantic Versioning for Natural Language</a>
+      <p>A system that helps writers and readers work with living documents.</p>
+    </li>
     <li>
       <a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a>
       <p>A theme that you can use to make your company seem legit.</p>
@@ -56,6 +62,10 @@
   <h2>Writing</h2>
   <ul>
     <li>
+      <a target='_blank' href='http://wuweifashion.com/issue-nine/patrick-steadman-summer-of-kms'>Summer of KMS</a>
+      <p>A story about surveillance and entropy published in Wu-Wei Fashion Magazine.</p>
+    </li>
+    <li>
       <a target='_blank' href='/millennial-deep-state/'>The Millennial Deep State</a>
       <p>A presentation made at the Millennial Focus Group in April, 2016.</p>
     </li>
@@ -80,8 +90,27 @@
       <p>An infinite, algorithmically generated 'love poem'.</p>
     </li>
   </ul>
+  <h2>Fluff</h2>
+  <ul>
+    <li>
+      <a target='_blank' href='http://0x0a.li/en/bot-poetry-at-the-sfpc/'>Bot Poetry at the SFPC</a>
+      <p><i>0x0a</i>, October 2015</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://joshspilker.com/the-quality-of-aletheia-interview-with-patrick-steadman/'>The Quality of Alethia :: Interview</a>
+      <p><i>Josh Spilker</i>, October 2015</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://blog.newhive.com/theobot/'>XTRANORMAL VAPORWAVE MICROSOFT VOICE DEFINE ANGST YOUNG THUG NAKED LUNCH THERES SHIT EVERYWHERE: TALKING TO THEO THIMO & PATRICK STEADMAN ABOUT @THEO_SEARCH</a>
+      <p><i>Newhive</i>, September 2015</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://technical.ly/brooklyn/2015/08/31/daily-mail-parody-site-best-stories-online-patrick-steadman/'>EXCLUSIVE: This Bushwick engineer built a WICKEDLY good Daily Mail parody site</a>
+      <p><i>Technical.ly</i>, August 2015</p>
+    </li>
+  </ul>
   <br>
-  <p><i>&nbsp;Last Updated: April 25th, 2016</i></p>
+  <p><i>&nbsp;Last Updated: May 9th, 2016</i></p>
 </div>
 </body>
 <script>
