update google search history stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
   <p>Welcome to my vanity website.</p> 
+  <br>
   <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
   <br>
   <br>
@@ -47,7 +48,7 @@
       <p>A game that I helped make.</p>
     </li>
     <li>
-      <a target='_blank'  href='http://blog.newhive.com/theobot/'>Google Search Twitter Feed</a>
+      <a target='_blank'  href='http://computerlab.io/2016/06/22/what-i-learned-from-live-tweeting-google/'>Google Search Twitter Feed</a>
       <p>Since May 2015, all of my Google searches have been published in real time.</p>
     </li>
     <li>
@@ -110,7 +111,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: May 9th, 2016</i></p>
+  <p><i>&nbsp;Last Updated: July 31st, 2016</i></p>
 </div>
 </body>
 <script>
