--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Patrick Steadman</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content="Patrick Steadman is a writer and programmer living in Brooklyn, currently head of operations at Computer Lab.">
+<meta name='description' content="Patrick Steadman writer, programmer, and co-founder of Computer Lab."
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -91,7 +91,7 @@
       <p>An infinite, algorithmically generated 'love poem'.</p>
     </li>
   </ul>
-  <h2>Fluff</h2>
+  <h2>Press / Interviews</h2>
   <ul>
     <li>
       <a target='_blank' href='http://0x0a.li/en/bot-poetry-at-the-sfpc/'>Bot Poetry at the SFPC</a>
@@ -111,7 +111,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: July 31st, 2016</i></p>
+  <p><i>&nbsp;Last Updated: July 9th, 2017</i></p>
 </div>
 </body>
 <script>
