add link to Pattern Language

--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
   <h2>Programming</h2>
   <ul>
     <li>
-      <a target='_blank'  href='http://github.com/ptsteadman/semver-for-natural-language'>Semantic Versioning for Natural Language</a>
-      <p>A system that helps writers and readers work with living documents.</p>
-    </li>
-    <li>
       <a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a>
       <p>A theme that you can use to make your company seem legit.</p>
     </li>
@@ -63,8 +59,16 @@
   <h2>Writing</h2>
   <ul>
     <li>
+      <a target='_blank' href='http://www.onscreentoday.com/screenshot/pattern-language'>Pattern Language</a>
+      <p>Exploring the patterns that make buildings, software, and art feel alive.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='http://github.com/ptsteadman/semver-for-natural-language'>Semantic Versioning for Natural Language</a>
+      <p>A system that helps writers and readers work with living documents.</p>
+    </li>
+    <li>
       <a target='_blank' href='http://wuweifashion.com/issue-nine/patrick-steadman-summer-of-kms'>Summer of KMS</a>
-      <p>A story about surveillance and entropy published in Wu-Wei Fashion Magazine.</p>
+      <p>A story about entropy and surveillance published in Wu-Wei Fashion Magazine.</p>
     </li>
     <li>
       <a target='_blank' href='/millennial-deep-state/'>The Millennial Deep State</a>
@@ -91,7 +95,7 @@
       <p>An infinite, algorithmically generated 'love poem'.</p>
     </li>
   </ul>
-  <h2>Press / Interviews</h2>
+  <h2>Other</h2>
   <ul>
     <li>
       <a target='_blank' href='http://0x0a.li/en/bot-poetry-at-the-sfpc/'>Bot Poetry at the SFPC</a>
