--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </ul>
   <p>Welcome to my vanity website.</p> 
   <br>
-  <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
+  <img src="images/pts_new.jpg">
   <br>
   <br>
   <p>Currently working at <a href="http://computerlab.io">Computer Lab</a>.</p>
@@ -115,7 +115,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: July 16th, 2017</i></p>
+  <p><i>&nbsp;Last Updated: August 1st, 2017</i></p>
 </div>
 </body>
 <script>
