--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
   <p>Welcome to my vanity website.</p>
+  <p>I hope you find what you're looking for.</p>
   <br>
   <img src="images/pts_new.jpg">
   <br>
   <br>
-  <p>Currently working at <a href="https://computerlab.io">Computer Lab</a>.</p>
+  <p>
+    I currently work as a software developer at <a href="https://computerlab.io">Computer Lab</a>.
+  </p>
+  <p>
+    I'm also looking for freelance writing work.
+  </p>
   <h2>Programming</h2>
   <ul>
     <li>
@@ -45,7 +51,7 @@
     </li>
     <li>
       <a target='_blank'  href='http://computerlab.io/2016/06/22/what-i-learned-from-live-tweeting-google/'>Google Search Twitter Feed</a>
-      <p>Since May 2015, all of my Google searches have been published in real time.</p>
+      <p>From May 2015 to July 2016 all my Google searches were published in real time.</p>
     </li>
     <li>
       <a target='_blank'  href='IMG_1772'>IMG_1772</a>
@@ -58,6 +64,14 @@
   </ul>
   <h2>Writing</h2>
   <ul>
+    <li>
+      <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
+      <p>An overview of the uses and abuses of the "gray man" survival strategy.</p>
+    </li>
+    <li>
+      <a target='_blank' href='https://computerlab.io/2018/01/01/decentralized-pigeon-game-nyc/'>The Decentralized Pigeon-Flying Game of New York City</a>
+      <p>About my obsession with pigeons.</p>
+    </li>
     <li>
       <a target='_blank' href='https://computerlab.io/2017/07/17/a-critique-of-vulnerability/'>A Critique of Vulnerability</a>
       <p>Four types of vulnerability that you shouldn't lean into.</p>
@@ -92,7 +106,7 @@
     </li>
     <li>
       <a target='_blank' href='poetry.html'>Some Poetry</a>
-      <p>Poorly-versified poetry from 2012.</p>
+      <p>Poetry from 2012.</p>
     </li>
     <li>
       <a target='_blank' href='love-poem'>Love Poem</a>
@@ -119,7 +133,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: August 1st, 2017</i></p>
+  <p><i>&nbsp;Last Updated: February 4th, 2018</i></p>
 </div>
 </body>
 <script>
