--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <li><a target='_blank' href='http://twitter.com/ptsteadman'>Twitter</a></li>
     <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
-    <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
+    <li><a target='_blank' href='https://www.linkedin.com/in/ptsteadman'>LinkedIn</a></li>
   </ul>
   <p>Welcome to my vanity website.</p>
-  <p>I hope you find what you're looking for.</p>
   <br>
   <img src="images/pts_new.jpg">
   <br>
@@ -34,6 +33,10 @@
   <h2>Programming</h2>
   <ul>
     <li>
+      <a target='_blank' href='https://computerlab.io/2018/02/14/introducing-pigeon-sounds-hd/'>Pigeon Sounds HD</a>
+      <p>The Pigeon Sounds HD app puts eight high-quality pigeon field recordings in your pocket.</p>
+    </li>
+    <li>
       <a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a>
       <p>A theme that you can use to make your company seem legit.</p>
     </li>
@@ -44,10 +47,6 @@
     <li>
       <a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Baxter Industrial Robot Teleoperation</a>
       <p>Python code that lets you control an industrial robot with your body.</p>
-    </li>
-    <li>
-      <a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a>
-      <p>A game that I helped make.</p>
     </li>
     <li>
       <a target='_blank'  href='http://computerlab.io/2016/06/22/what-i-learned-from-live-tweeting-google/'>Google Search Twitter Feed</a>
@@ -66,7 +65,7 @@
   <ul>
     <li>
       <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
-      <p>An overview of the uses and abuses of the "gray man" survival strategy.</p>
+      <p>An overview of the "gray man" survival strategy.</p>
     </li>
     <li>
       <a target='_blank' href='https://computerlab.io/2018/01/01/decentralized-pigeon-game-nyc/'>The Decentralized Pigeon-Flying Game of New York City</a>
