--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </ul>
   <p>Welcome to my vanity website.</p>
   <br>
-  <img src="images/pts_new.jpg">
+  <img src="images/pigeon.jpg">
   <br>
   <br>
   <p>
