shorten sum description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/in/ptsteadman'>LinkedIn</a></li>
   </ul>
-  <br>
   <img src="images/pigeon.jpg">
   <br>
   <br>
@@ -64,7 +63,7 @@
   <ul>
     <li>
       <a target='_blank' href='http://sumrevija.si/en/sum9-patrick-steadman-advanced-persistent-threats-in-the-arts/'>Advanced Persistent Threats in the Arts</a>
-      <p>How nation-state level actors can corrupt the practice of art through shadowy funding and hacking attacks.</p>
+      <p>How nation-state level actors corrupt the arts through shadowy funding and hacking attacks.</p>
     </li>
     <li>
       <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
