--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class='fuxing'>
 <div class='container'>
-    <h1><a href="/">Patrick Steadman's Personal Website</a></h1>
+    <h1><a href="/">Patrick Steadman</a></h1>
   <ul class='menu'>
     <li><a target='_blank' href='http://twitter.com/ptsteadman'>Twitter</a></li>
     <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
@@ -30,6 +30,14 @@
   </p>
   <h2>Programming</h2>
   <ul>
+    <li>
+      <a target='_blank' href='https://news.ycombinator.com/item?id=18746714'>Kill My Slack</a>
+      <p>A pretty JavaScript function that (temporarily?) deactivates all users in a Slack.</p>
+    </li>
+    <li>
+      <a target='_blank' href='https://news.ycombinator.com/item?id=18746714'>Deploying Headless WordPress + React Starter on Google Cloud Platform</a>
+      <p>How to deploy my favorite architecture for "content" websites to the cloud.</p>
+    </li>
     <li>
       <a target='_blank' href='https://computerlab.io/2018/02/14/introducing-pigeon-sounds-hd/'>Pigeon Sounds HD</a>
       <p>The Pigeon Sounds HD app puts eight high-quality pigeon field recordings in your pocket.</p>
@@ -63,7 +71,7 @@
   <ul>
     <li>
       <a target='_blank' href='http://sumrevija.si/en/sum9-patrick-steadman-advanced-persistent-threats-in-the-arts/'>Advanced Persistent Threats in the Arts</a>
-      <p>How nation-state level actors corrupt the arts through shadowy funding and hacking attacks.</p>
+      <p>How nation-state level actors can corrupt the arts through shadowy funding and hacking attacks.</p>
     </li>
     <li>
       <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
@@ -134,7 +142,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: May 21st, 2018</i></p>
+  <p><i>&nbsp;Last Updated: December 22rd, 2018</i></p>
 </div>
 </body>
 <script>
