--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/in/ptsteadman'>LinkedIn</a></li>
   </ul>
-  <img src="images/pigeon.jpg">
+  <img src="images/pts_femme.jpg">
   <br>
   <br>
   <p>
