update date and comment out 404ing interview

--- a/index.html
+++ b/index.html
@@ -128,10 +128,12 @@
       <a target='_blank' href='http://0x0a.li/en/bot-poetry-at-the-sfpc/'>Bot Poetry at the SFPC</a>
       <p><i>0x0a</i>, October 2015</p>
     </li>
+    <!--
     <li>
       <a target='_blank' href='http://joshspilker.com/the-quality-of-aletheia-interview-with-patrick-steadman/'>The Quality of Alethia :: Interview</a>
       <p><i>Josh Spilker</i>, October 2015</p>
     </li>
+    -->
     <li>
       <a target='_blank' href='http://blog.newhive.com/theobot/'>XTRANORMAL VAPORWAVE MICROSOFT VOICE DEFINE ANGST YOUNG THUG NAKED LUNCH THERES SHIT EVERYWHERE: TALKING TO THEO THIMO & PATRICK STEADMAN ABOUT @THEO_SEARCH</a>
       <p><i>Newhive</i>, September 2015</p>
@@ -142,7 +144,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: December 22rd, 2018</i></p>
+  <p><i>&nbsp;Last Updated: January 18th, 2019</i></p>
 </div>
 </body>
 <script>
