--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/in/ptsteadman'>LinkedIn</a></li>
   </ul>
-  <img src="images/pts_femme.jpg">
+  <img src="images/pts_pigeon.jpg">
   <br>
   <br>
   <p>
@@ -144,7 +144,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: January 18th, 2019</i></p>
+  <p><i>&nbsp;Last Updated: March 18th, 2019</i></p>
 </div>
 </body>
 <script>
