--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Patrick Steadman</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content="Patrick Steadman is a writer, programmer, and co-founder of Computer Lab."
+<meta name='description' content="Patrick Steadman is a programmer, writer, and co-founder of Computer Lab."
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -23,7 +23,9 @@
   <br>
   <br>
   <p>
-    I currently work as a software developer at <a href="https://computerlab.io">Computer Lab</a>.
+    I currently work at <a href="https://computerlab.io">Computer Lab</a>, a
+    consultancy that helps artists and creative organizations execute software
+    projects.
   </p>
   <p>
     I'm also looking for freelance writing work.
@@ -49,10 +51,6 @@
     <li>
       <a target='_blank'  href='http://github.com/ptsteadman/kaboodle'>Kaboodle, A DIY Ad Server</a>
       <p>A script that puts fake ads on your site to make it look legit.</p>
-    </li>
-    <li>
-      <a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Baxter Industrial Robot Teleoperation</a>
-      <p>Python code that lets you control an industrial robot with your body.</p>
     </li>
     <li>
       <a target='_blank'  href='http://computerlab.io/2016/06/22/what-i-learned-from-live-tweeting-google/'>Google Search Twitter Feed</a>
@@ -124,6 +122,19 @@
   </ul>
   <h2>Other</h2>
   <ul>
+
+    <li>
+      <a target='_blank' href='https://www.vice.com/en_us/article/v74k5b/meet-the-diy-ravers-giving-free-masks-to-every-new-yorker'>
+        Meet The DIY Ravers Giving Free Masks to Every New Yorker
+      </a>
+      <p><i>Vice Magazine</i>, April 2020</p>
+    </li>
+    <li>
+      <a target='_blank' href='https://www.interviewmagazine.com/culture/tik-tok-fame-videos-diplo-content-spring'>
+        A Bunch of People, From Professors To Diplo, Consider The TikTok Craze
+      </a>
+      <p><i>Interview Magazine</i>, April 2020</p>
+    </li>
     <li>
       <a target='_blank' href='http://0x0a.li/en/bot-poetry-at-the-sfpc/'>Bot Poetry at the SFPC</a>
       <p><i>0x0a</i>, October 2015</p>
@@ -134,17 +145,17 @@
       <p><i>Josh Spilker</i>, October 2015</p>
     </li>
     -->
-    <li>
-      <a target='_blank' href='http://blog.newhive.com/theobot/'>XTRANORMAL VAPORWAVE MICROSOFT VOICE DEFINE ANGST YOUNG THUG NAKED LUNCH THERES SHIT EVERYWHERE: TALKING TO THEO THIMO & PATRICK STEADMAN ABOUT @THEO_SEARCH</a>
-      <p><i>Newhive</i>, September 2015</p>
-    </li>
+    <!-- <li> -->
+    <!--   <a target='_blank' href='http://blog.newhive.com/theobot/'>XTRANORMAL VAPORWAVE MICROSOFT VOICE DEFINE ANGST YOUNG THUG NAKED LUNCH THERES SHIT EVERYWHERE: TALKING TO THEO THIMO & PATRICK STEADMAN ABOUT @THEO_SEARCH</a> -->
+    <!--   <p><i>Newhive</i>, September 2015</p> -->
+    <!-- </li> -->
     <li>
       <a target='_blank' href='http://technical.ly/brooklyn/2015/08/31/daily-mail-parody-site-best-stories-online-patrick-steadman/'>EXCLUSIVE: This Bushwick engineer built a WICKEDLY good Daily Mail parody site</a>
       <p><i>Technical.ly</i>, August 2015</p>
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: March 18th, 2019</i></p>
+  <p><i>&nbsp;Last Updated: June 28th, 2020</i></p>
 </div>
 </body>
 <script>
