fix image reflow

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/in/ptsteadman'>LinkedIn</a></li>
   </ul>
-  <img src="images/pts_pigeon.jpg">
+  <div class="responsive-container">
+    <img alt="picasso pigeon drawing" src="images/pts_pigeon.jpg">
+  </div>
   <br>
   <br>
   <p>
@@ -56,10 +58,12 @@
       <a target='_blank'  href='http://computerlab.io/2016/06/22/what-i-learned-from-live-tweeting-google/'>Google Search Twitter Feed</a>
       <p>From May 2015 to July 2016 all my Google searches were published in real time.</p>
     </li>
+    <!--
     <li>
       <a target='_blank'  href='IMG_1772'>IMG_1772</a>
       <p>A website for sharing videos with less than 100 views.</p>
     </li>
+    -->
     <li>
       <a target='_blank'  href='memorial'>9/11 Pager Messages</a>
       <p>A 9/11 memorial that streams pager messages from that day in real time.</p>
