--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
   <h2>Programming</h2>
   <ul>
     <li>
-      <a target='_blank' href='https://news.ycombinator.com/item?id=18746714'>Kill My Slack</a>
-      <p>A pretty JavaScript function that (temporarily?) deactivates all users in a Slack.</p>
+      <a target='_blank' href='https://github.com/computer-lab/kms/blob/master/kms.js'>Kill My Slack</a>
+      <p>A little JavaScript function that (temporarily?) deactivates all users in a Slack.</p>
     </li>
     <li>
-      <a target='_blank' href='https://news.ycombinator.com/item?id=18746714'>Deploying Headless WordPress + React Starter on Google Cloud Platform</a>
+      <a target='_blank' href='https://computerlab.io/2018/12/20/deploying-headless-wordpress-on-gcp/'>Deploying Headless WordPress + React Starter on Google Cloud Platform</a>
       <p>How to deploy my favorite architecture for "content" websites to the cloud.</p>
     </li>
     <li>
