--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
 <div class='container'>
     <h1><a href="/">Patrick Steadman</a></h1>
   <ul class='menu'>
-    <li><a target='_blank' href='http://twitter.com/ptsteadman'>Twitter</a></li>
-    <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
+    <li><a target='_blank' href='http://twitter.com/computerlab_'>Twitter</a></li>
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/in/ptsteadman'>LinkedIn</a></li>
   </ul>
@@ -25,19 +24,23 @@
   <br>
   <br>
   <p>
-    I currently work at <a href="https://computerlab.io">Computer Lab</a>, a
+    I work as a platform engineer at <a href="https://www.sothebys.com/">Sotheby's</a>.
+  </p>
+  <p>
+    I also co-founded <a href="https://computerlab.io">Computer Lab</a>, a
     consultancy that helps artists and creative organizations execute software
-    projects.
+    projects. 
+  </p>
+  <p>
+    Our best-known product is <a href="https://accesskit.media">AccessKit</a>, a tool
+    museums use to provision video installations with accessibility features like multi-lingual
+    captions and real-time audio descriptions.
   </p>
   <h2>Programming</h2>
   <ul>
     <li>
       <a target='_blank' href='https://github.com/computer-lab/kms/blob/master/kms.js'>Kill My Slack</a>
       <p>A little JavaScript function that (temporarily?) deactivates all users in a Slack.</p>
-    </li>
-    <li>
-      <a target='_blank' href='https://computerlab.io/2018/12/20/deploying-headless-wordpress-on-gcp/'>Deploying Headless WordPress + React Starter on Google Cloud Platform</a>
-      <p>How to deploy my favorite architecture for "content" websites to the cloud.</p>
     </li>
     <li>
       <a target='_blank' href='https://computerlab.io/2018/02/14/introducing-pigeon-sounds-hd/'>Pigeon Sounds HD</a>
@@ -60,17 +63,23 @@
       <a target='_blank'  href='IMG_1772'>IMG_1772</a>
       <p>A website for sharing videos with less than 100 views.</p>
     </li>
+    -->
     <li>
       <a target='_blank'  href='memorial'>9/11 Pager Messages</a>
       <p>A 9/11 memorial that streams pager messages from that day in real time.</p>
     </li>
-    -->
   </ul>
   <h2>Writing</h2>
   <ul>
     <li>
+      <a target='_blank'
+        href='https://computerlab.io/2020/06/11/how-to-help-a-stringfoot-pigeon/'>How to Help a
+        Stringfoot Pigeon</a>
+      <p>How to give pigeons with entangled toes a life-saving pedicure.</p>
+    </li>
+    <li>
       <a target='_blank' href='https://computerlab.io/2018/01/01/decentralized-pigeon-game-nyc/'>The Decentralized Pigeon-Flying Game of New York City</a>
-      <p>About my obsession with pigeons.</p>
+      <p>About my interest in pigeons.</p>
     </li>
     <li>
       <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
@@ -105,18 +114,18 @@
       <p>A photo essay about exploring drainage tunnels in Taipei.</p>
     </li>
     <li>
-      <a target='_blank' href='poetry.html'>Some Poetry</a>
-      <p>Poetry from 2012.</p>
-    </li>
-    <!--
-    <li>
       <a target='_blank' href='love-poem'>Love Poem</a>
       <p>An infinite, algorithmically generated 'love poem'.</p>
     </li>
-    -->
   </ul>
   <h2>Other</h2>
   <ul>
+    <li>
+      <a target='_blank'
+        href='https://computerlab.io/2023/06/08/chinese-software-engineering-flashcards/'>Chinese
+        Software Engineering Terminology Flashcards</a>
+      <p>400+ Anki flashcards for Chinese vocab used in software development and project management.</p>
+    </li>
 
     <li>
       <a target='_blank' href='https://www.vice.com/en_us/article/v74k5b/meet-the-diy-ravers-giving-free-masks-to-every-new-yorker'>
@@ -150,7 +159,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: July 14th, 2021</i></p>
+  <p><i>&nbsp;Last Updated: August 15th, 2024</i></p>
 </div>
 </body>
 <script>
