--- a/src/index.html
+++ b/src/index.html
@@ -113,10 +113,12 @@
       <a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a>
       <p>A photo essay about exploring drainage tunnels in Taipei.</p>
     </li>
+    <!--
     <li>
-      <a target='_blank' href='love-poem'>Love Poem</a>
+      <a target='_blank' href='/love-poem'>Love Poem</a>
       <p>An infinite, algorithmically generated 'love poem'.</p>
     </li>
+    -->
   </ul>
   <h2>Other</h2>
   <ul>
