--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <br>
   <br>
   <p>
-    I work as a platform engineer at <a href="https://www.sothebys.com/">Sotheby's</a>.
+    I most recently worked as a platform engineer at <a href="https://www.sothebys.com/">Sotheby's</a>.
   </p>
   <p>
     I also co-founded <a href="https://computerlab.io">Computer Lab</a>, a
@@ -36,6 +36,60 @@
     museums use to provision video installations with accessibility features like multi-lingual
     captions and real-time audio descriptions.
   </p>
+  <h2>Writing</h2>
+  <ul>
+    <li>
+      <a target='_blank'
+        href='https://computerlab.io/2020/06/11/how-to-help-a-stringfoot-pigeon/'>How to Help a
+        Stringfoot Pigeon</a>
+      <p>How to give pigeons with entangled toes a life-saving pedicure.</p>
+    </li>
+    <li>
+      <a target='_blank'
+        href='https://sumrevija.si/en/sum9-patrick-steadman-advanced-persistent-threats-in-the-arts/'>Advanced
+      Persistent Threats in the Arts</a>
+      <p>Recent examples of shadowy arts funding and hacking attacks on culture organizations hint at how nation-state level actors can corrupt or disrupt culture around the world.</p>
+    </li>
+
+    <li>
+      <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
+      <p>An overview of the "gray man" survival strategy.</p>
+    </li>
+    <li>
+      <a target='_blank' href='https://computerlab.io/2017/07/17/a-critique-of-vulnerability/'>A Critique of Vulnerability</a>
+      <p>Four types of vulnerability that you shouldn't lean into.</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://www.onscreentoday.com/screenshot/pattern-language'>Pattern Language</a>
+      <p>Exploring the patterns that make buildings, software, and art feel alive.</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://wuweifashion.com/issue-nine/patrick-steadman-summer-of-kms'>Summer of KMS</a>
+      <p>A story about entropy and surveillance published in Wu-Wei Fashion Magazine.</p>
+    </li>
+    <li>
+      <a target='_blank' href='/millennial-deep-state/'>The Millennial Deep State</a>
+      <p>A presentation made at the Millennial Focus Group in April, 2016.</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://collegememoir.com'>College Memoir</a>
+      <p>A novella about the fantasy world of athletics and academics.</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a>
+      <p>Shocking news, stories, thoughts, and videos.</p>
+    </li>
+    <li>
+      <a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a>
+      <p>A photo essay about exploring drainage tunnels in Taipei.</p>
+    </li>
+    <!--
+    <li>
+      <a target='_blank' href='/love-poem'>Love Poem</a>
+      <p>An infinite, algorithmically generated 'love poem'.</p>
+    </li>
+    -->
+  </ul>
   <h2>Programming</h2>
   <ul>
     <li>
@@ -64,61 +118,10 @@
       <p>A website for sharing videos with less than 100 views.</p>
     </li>
     -->
-    <li>
-      <a target='_blank'  href='memorial'>9/11 Pager Messages</a>
-      <p>A 9/11 memorial that streams pager messages from that day in real time.</p>
-    </li>
-  </ul>
-  <h2>Writing</h2>
-  <ul>
-    <li>
-      <a target='_blank'
-        href='https://computerlab.io/2020/06/11/how-to-help-a-stringfoot-pigeon/'>How to Help a
-        Stringfoot Pigeon</a>
-      <p>How to give pigeons with entangled toes a life-saving pedicure.</p>
-    </li>
-    <li>
-      <a target='_blank' href='https://computerlab.io/2018/01/01/decentralized-pigeon-game-nyc/'>The Decentralized Pigeon-Flying Game of New York City</a>
-      <p>About my interest in pigeons.</p>
-    </li>
-    <li>
-      <a target='_blank' href='https://www.ribbonfarm.com/2018/02/01/dont-be-the-gray-man/'>(Don't) be the Gray Man</a>
-      <p>An overview of the "gray man" survival strategy.</p>
-    </li>
-    <li>
-      <a target='_blank' href='https://computerlab.io/2017/07/17/a-critique-of-vulnerability/'>A Critique of Vulnerability</a>
-      <p>Four types of vulnerability that you shouldn't lean into.</p>
-    </li>
-    <li>
-      <a target='_blank' href='http://www.onscreentoday.com/screenshot/pattern-language'>Pattern Language</a>
-      <p>Exploring the patterns that make buildings, software, and art feel alive.</p>
-    </li>
-    <li>
-      <a target='_blank' href='http://wuweifashion.com/issue-nine/patrick-steadman-summer-of-kms'>Summer of KMS</a>
-      <p>A story about entropy and surveillance published in Wu-Wei Fashion Magazine.</p>
-    </li>
-    <li>
-      <a target='_blank' href='/millennial-deep-state/'>The Millennial Deep State</a>
-      <p>A presentation made at the Millennial Focus Group in April, 2016.</p>
-    </li>
-    <li>
-      <a target='_blank' href='http://collegememoir.com'>College Memoir</a>
-      <p>A novella about the fantasy world of athletics, academics, and sex.</p>
-    </li>
-    <li>
-      <a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a>
-      <p>Shocking news, stories, thoughts, and videos.</p>
-    </li>
-    <li>
-      <a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a>
-      <p>A photo essay about exploring drainage tunnels in Taipei.</p>
-    </li>
-    <!--
-    <li>
-      <a target='_blank' href='/love-poem'>Love Poem</a>
-      <p>An infinite, algorithmically generated 'love poem'.</p>
-    </li>
-    -->
+    <!-- <li> -->
+    <!--   <a target='_blank'  href='memorial'>9/11 Pager Messages</a> -->
+    <!--   <p>A 9/11 memorial that streams pager messages from that day in real time.</p> -->
+    <!-- </li> -->
   </ul>
   <h2>Other</h2>
   <ul>
@@ -161,7 +164,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: August 15th, 2024</i></p>
+  <p><i>&nbsp;Last Updated: October 16th, 2025</i></p>
 </div>
 </body>
 <script>
